# aifoundry-agentsv2-monorepo

./: .gitignore  LICENSE  README.md  __azurite_db_table__.json  azd.yaml  azure.yaml  pyproject.toml
agents/30-pb-foundryiq-insurance-agent/: .env.example  .gitignore  ISSUE_KB_MCP_AUTH.md  Makefile  README.md  pyproject.toml
agents/30-pb-foundryiq-insurance-agent/docs/design/: architecture.md  code-flow.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
agents/30-pb-foundryiq-insurance-agent/scripts/: ingest_documents.py  run_foundry_evaluations.py  run_orchestrator.py
agents/30-pb-foundryiq-insurance-agent/src/insurance_agent/: config.py
agents/30-pb-foundryiq-insurance-agent/src/insurance_agent/core/: telemetry.py
agents/30-pb-foundryiq-insurance-agent/src/insurance_agent/evals/: batch.py
agents/30-pb-foundryiq-insurance-agent/src/insurance_agent/ingest/: loaders.py
agents/30-pb-foundryiq-insurance-agent/src/insurance_agent/runtime/: openai_client.py  run.py
agents/40-pb-sharepoint-agent/: .env.example  Makefile  README.md  pyproject.toml
agents/40-pb-sharepoint-agent/docs/design/: architecture.md  code-flow.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
agents/40-pb-sharepoint-agent/scripts/: run_foundry_evaluations.py  run_orchestrator.py  run_orchestrator.sh
agents/40-pb-sharepoint-agent/src/sharepoint_agent/: __init__.py  config.py  prompt.md
agents/40-pb-sharepoint-agent/src/sharepoint_agent/core/: __init__.py  exceptions.py  telemetry.py
agents/40-pb-sharepoint-agent/src/sharepoint_agent/evals/: __init__.py  batch.py
agents/40-pb-sharepoint-agent/src/sharepoint_agent/runtime/: __init__.py  cache.py  connections.py  run.py
agents/40-pb-sharepoint-agent/tests/integration/: test_runtime.py
agents/40-pb-sharepoint-agent/tests/unit/: test_runtime.py
agents/50-pb-teams-bing-agent/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
agents/50-pb-teams-bing-agent/.foundry/: agent.json
agents/50-pb-teams-bing-agent/docs/design/: architecture.md  code-flow.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
agents/50-pb-teams-bing-agent/infra/: README.md  provision_aca.sh  provision_bot.sh
agents/50-pb-teams-bing-agent/scripts/: run_agent.py  run_anon_smoke_test.py  run_auth_smoke_test.py  run_batch_questions.py  run_foundry_evaluations.py  run_orchestrator.py  run_orchestrator.sh
agents/50-pb-teams-bing-agent/scripts/kusto/: business-events.kql  dependency-flow.kql  event-counts.kql  exceptions.kql  run-kusto-queries.sh
agents/50-pb-teams-bing-agent/src/teams_bing_agent/: app.py  config.py  prompt.md
agents/50-pb-teams-bing-agent/src/teams_bing_agent/core/: __init__.py  exceptions.py  logging.py  prompt_loader.py  telemetry.py
agents/50-pb-teams-bing-agent/teams/: README.md  build_teams_package.py  manifest.template.json
agents/50-pb-teams-bing-agent/tests/unit/: test_agent.py  test_runtime.py  test_state.py
(+199 files in other folders)
